--- a/public/index.html
+++ b/public/index.html
@@ -16,4 +16,12 @@
   <div id="root"></div>
 </body>
 
+ 
+<script
+src="https://cdn.cai.tools.sap/webchat/webchat.js"
+channelId="bf68ce6e-6467-453f-a095-673d9fa33712"
+token="accd8585c2f5363914913392eff4c7bd"
+id="cai-webchat">
+</script>
+
 </html>
